# discord_tts_library

./: .gitignore  .pre-commit-config.yaml  Readme.md  build.sh  pyproject.toml
tests/: test_download.py  test_make_file.py
tts/: version.py
