[project]
name = "dvtwebapi.py"
version = "1.0.2"
description = "voicetext web apiをdiscord bot用に使いやすくしたラッパー"
requires-python = ">=3.13"
dependencies = [
    "discord-py",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
]


[project.urls]
homepage = "https://github.com/furimu1234/discord_tts_library"
repository = "https://github.com/furimu1234/discord_tts_library"

[tool.uv]
dev-dependencies = [
    "black",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "isort",
    "ruff",
    "pre-commit",
    "twine>=6.1.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/Rapptz/discord.py" }

[tool.pyright]
reportIncompatibleMethodOverride=false


[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
include = ["pyproject.toml"]
fix = true
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E722", "F403", "F405"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
skip-magic-trailing-comma = true
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
package-dir = {"" = "tts"}

[tool.setuptools.dynamic]
version = {attr = "version.version"}

[tool.setuptools_scm]
write_to = "tts/version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
